tests/semantic/invalid/18_scope.src
fn main() -> int {
    {
        int x = 10;
    }
    return x;
}
